# squad_gps

./: .editorconfig  .gitignore  .gitmodules  .prettierrc.toml  Caddyfile  Dockerfile  detect_car.py  factions.json  feature_detection2.ipynb  get_encoded_sizes.py  initRoutes.py  logger.py  opencv_feature_detection.ipynb  process_video.py  process_videos.py  proxy_range.py  pyproject.toml  server.py  startup.sh  test.ipynb  test_image.py  test_video.py  upload_files.ts  vehicles.json
caddy/: README.md
gui/: .gitignore  CMakeLists.txt  README.md  eslintrc.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
gui/emscripten/: img_tracker_wasm.cpp
gui/public/data/: routes
gui/src/: App.tsx  FileUpload.tsx  LeafletPlanner.tsx  MapNode.ts  Node.ts  RouteVisualizer.tsx  database.types.ts  draw_tool.tsx  index.css  index.tsx  middleware.ts  planner.tsx  pocketbase.ts  supabase.ts  types.ts
gui/src/assets/: factions.json  img_tracker_wasm.js  img_tracker_wasm.wasm  vehicles.json
gui/src/components/: App.module.css  App.tsx  FileUpload.tsx  ForgotPassword.tsx  Guarded.tsx  ImageTracker.tsx  Input.tsx  Login.tsx  Modal.tsx  NavBar.tsx  OpencvJs.tsx  RouteUpload.tsx  RouteViewer.tsx  RouteVisualizer.tsx  RoutesTable.tsx  UpdatePassword.tsx  draw_tool.tsx
gui/src/lib/: grayscale.ts  img_tracker_wasm.js  img_tracker_wasm.wasm  parse.js  read.js  read.wasm  sandbox.js  sandbox.wasm
gui/supabase/: config.toml  testFunctions.http
gui/supabase/functions/processVideo/: index.ts
gui/supabase/migrations/: 20230731230628_init.sql  20230801211552_iter_2.sql  20230802080133_upload_details.sql  20230802084036_buckets.sql  20230802150557_offset.sql  20230807164351_consolidate_route_uploads.sql
pocketbase/: CHANGELOG.md
pocketbase/pb_migrations/: 1705888648_created_routes.js  1705898296_updated_routes.js  1705898549_updated_routes.js  1705899565_updated_routes.js  1705899590_updated_routes.js  1705899980_updated_routes.js  1705909998_updated_routes.js
route_processor/: .dockerignore  Dockerfile  _pocketbase.py  _supabase.py  config.py  extract_route.py  main.py
routes/yehorivka/: index.json  yeho-car-r2.csv  yehorivka_yeho-car-r2.csv  yehorivka_yeho-car1.csv  yehorivka_yeho-car2.csv  yehorivka_yeho-car3.csv
server/: Dockerfile  _pocketbase.py  _supabase.py  config.py  detect_car.py  extract_map_data.py  extract_route.py  logger.py  main.py  pb_main.py  process_video.py  pyproject.toml  server.py  shared.py  test.py
