[tool.poetry]
name = "squad_gps"
version = "0.1.0"
description = ""
authors = ["petevdp <pjvanderpol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.11,<3.13"
setuptools = "^68.0.0"
supabase = "^1.0.3"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
opencv-python-headless = "^4.8.0.74"
structlog = "^23.1.0"
pocketbase = "^0.9.2"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"


[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
scipy = "^1.11.1"
opencv-python = "^4.8.0.74"
pandas = "^2.0.3"
shell = "^1.0.1"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
